--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         <ul>
             <li>
                 <p> 
-                    <a href="https://www.linkedin.com/in/dafne-berenice-sanchez-uscanga/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/dafne-berenice-sanchez-uscanga/" target="_blank" >LinkedIn</a>
                 </p>
             </li>
             <li>
                 <p>
-                <a href="https://github.com/Dafneesanch23/">GitHub</a>
+                <a href="https://github.com/Dafneesanch23/" target="_blank" >GitHub</a>
                 </p>
             </li>
             <li>
                 <p>
-                 <a href="https://www.instagram.com/daphneesanchez/"> Instagram  </a> 
+                 <a href="https://www.instagram.com/daphneesanchez/" target="_blank" > Instagram  </a> 
                 </p>
             </li>
         </ul>
@@ -50,12 +50,12 @@
         <ol>
             <li>
                 <p>
-                <a href="https://github.com/Dafneesanch23/test">Test</a>
+                <a href="https://github.com/Dafneesanch23/test" target="_blank" >Test</a>
                 </p>
             </li>
            <li>
             <p>
-            <a href="https://i.pinimg.com/564x/aa/de/45/aade45f81acf382ea90bcb8573400969.jpg">Feliz navidad</a>
+            <a href="https://i.pinimg.com/564x/aa/de/45/aade45f81acf382ea90bcb8573400969.jpg" target="_blank" >Feliz navidad</a>
             </p>
            </li>
         </ol>
