se centra la imagen principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Dafne Sánchez</h1>
 
-    <div>
+    <div style="text-align: center;" >
     <img width="300px" max-height="" src="https://i.pinimg.com/564x/85/a3/9d/85a39deecd96c3fc77d7e3e5d39350bd.jpg" alt="Perrito cheems con mochila bajo un letrero de BIENVENIDOS">
     </div>
 
