se cambia el formato de links y color de títulos

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Dafne</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 
 <body>
     <h1>Dafne Sánchez</h1>
 
     <div style="text-align: center;" >
-    <img width="300px" max-height="" src="https://i.pinimg.com/564x/85/a3/9d/85a39deecd96c3fc77d7e3e5d39350bd.jpg" alt="Perrito cheems con mochila bajo un letrero de BIENVENIDOS">
+    <img class="mainimg" width="300px" max-height="" src="https://i.pinimg.com/564x/85/a3/9d/85a39deecd96c3fc77d7e3e5d39350bd.jpg" alt="Perrito cheems con mochila bajo un letrero de BIENVENIDOS">
     </div>
 
     <h2>Portfolio</h2>
@@ -25,20 +25,20 @@
 
    <div>
         <h3>Links</h3>
-        <ul>
+        <ul id="u-list"> 
             <li>
-                <p> 
-                    <a href="https://www.linkedin.com/in/dafne-berenice-sanchez-uscanga/" target="_blank" >LinkedIn</a>
+                <p>
+                <a class="links" href="https://www.linkedin.com/in/dafne-berenice-sanchez-uscanga/" target="_blank" >LinkedIn</a>
                 </p>
             </li>
             <li>
                 <p>
-                <a href="https://github.com/Dafneesanch23/" target="_blank" >GitHub</a>
+                <a class="links" href="https://github.com/Dafneesanch23/" target="_blank" >GitHub</a>
                 </p>
             </li>
             <li>
                 <p>
-                 <a href="https://www.instagram.com/daphneesanchez/" target="_blank" > Instagram  </a> 
+                 <a class="links" href="https://www.instagram.com/daphneesanchez/" target="_blank" > Instagram  </a> 
                 </p>
             </li>
         </ul>
@@ -47,18 +47,18 @@
     
    <div>
         <h3>Projects</h3>
-        <ol>
+        <ul id="u-list">
             <li>
                 <p>
-                <a href="https://github.com/Dafneesanch23/test" target="_blank" >Test</a>
+                <a class="links" href="https://github.com/Dafneesanch23/test" target="_blank" >Test</a>
                 </p>
             </li>
            <li>
             <p>
-            <a href="https://i.pinimg.com/564x/aa/de/45/aade45f81acf382ea90bcb8573400969.jpg" target="_blank" >Feliz navidad</a>
+            <a class="links" href="https://i.pinimg.com/564x/aa/de/45/aade45f81acf382ea90bcb8573400969.jpg" target="_blank" >Feliz navidad</a>
             </p>
            </li>
-        </ol>
+        </ul>
    </div>
    
 </body>
