se añade formarto para div en padding y border

--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 </head>
 
 <body>
+
     <h1>Dafne Sánchez</h1>
 
-    <div style="text-align: center;" >
-    <img class="mainimg" width="300px" max-height="" src="https://i.pinimg.com/564x/85/a3/9d/85a39deecd96c3fc77d7e3e5d39350bd.jpg" alt="Perrito cheems con mochila bajo un letrero de BIENVENIDOS">
+    <div class="mainimg" style="text-align: center;" >
+    <img width="300px" max-height="" src="https://i.pinimg.com/564x/85/a3/9d/85a39deecd96c3fc77d7e3e5d39350bd.jpg" alt="Perrito cheems con mochila bajo un letrero de BIENVENIDOS">
     </div>
 
     <h2>Portfolio</h2>
-
-    <div>
+    <hr>
+    <div class="parraf">
         <h3>Personal info</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iure. Natus, aperiam eum autem aut officiis, suscipit quidem vitae asperiores vel, deserunt blanditiis ut quia architecto. Eum sint iusto omnis!</p>
     </div>
     <hr>
 
-   <div>
+   <div class="parraf">
         <h3>Links</h3>
         <ul id="u-list"> 
             <li>
@@ -42,10 +43,11 @@
                 </p>
             </li>
         </ul>
-        <hr>
    </div>
+
+   <hr>
     
-   <div>
+   <div class="parraf">
         <h3>Projects</h3>
         <ul id="u-list">
             <li>
@@ -60,7 +62,8 @@
            </li>
         </ul>
    </div>
-   
+
+
 </body>
 
 </html>
