se añade sección para contactos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,40 @@
            </li>
         </ul>
    </div>
+   
+   <div>
+   
+    <h1>Contáctame</h1>
+    
+    <form action="" method="" id="contacto">
+        <label for="nombre-usuario">Nombre: </label>
+        <input type="text" id="nombre-usuario" placeholder="e.j. Dafne" required>
+        <br>
+        <label for="apellido-usuario">Apellido(s):</label>
+        <input type="text" id="apellido-usuario" placeholder="e.j Sanchez" required>
+        <br>
+        <label for="email-usuario">Correo electrónico: </label>
+        <input type="email" id="email-usuario" placeholder="usuario@dominio.com" required>
+        <br>
+        <label for="telefono-usuario">Celular: </label>
+        <input type="tel" id="telefono-usuario" placeholder="Número a 10 dígitos" maxlength="10" required>
+        <br>
+        <label for="">Estoy de acuerdo</label>
+        <input type="checkbox">
+        <br>
+        <label for="">Mes uno</label>
+        <input type="radio" name="seleccion">
+        <br>
+        <label for="">Mes dos</label>
+        <input type="radio" name="seleccion">
+        <br>
+        <label for="">Mes tres</label>
+        <input type="radio" name="seleccion">
+        <br>
+        <button type="submit">Enviar</button>
 
+    </form>
+   </div>
 
 </body>
 
