se le da formato al formulario

--- a/index.html
+++ b/index.html
@@ -80,19 +80,10 @@
         <label for="telefono-usuario">Celular: </label>
         <input type="tel" id="telefono-usuario" placeholder="Número a 10 dígitos" maxlength="10" required>
         <br>
-        <label for="">Estoy de acuerdo</label>
-        <input type="checkbox">
+        <label for="mensaje-usuario">Mensaje:</label> 
+        <textarea id="mensaje-usuario" placeholder="Escribe tu mensaje aquí."></textarea>
         <br>
-        <label for="">Mes uno</label>
-        <input type="radio" name="seleccion">
-        <br>
-        <label for="">Mes dos</label>
-        <input type="radio" name="seleccion">
-        <br>
-        <label for="">Mes tres</label>
-        <input type="radio" name="seleccion">
-        <br>
-        <button type="submit">Enviar</button>
+        <button type="submit" class="boton">Enviar</button>
 
     </form>
    </div>
